--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 /* Banner block below header (additional banner) */
 .banner-block {
   width: 100%;
-  height: 50px;
+  height: 70px;
   background-image: url('https://images.unsplash.com/photo-1544723795-3fb7269402c3?ixlib=rb-4.0.1&auto=format&fit=crop&w=1600&q=80');
   background-size: cover;
   background-position: center;
@@ -159,7 +159,7 @@ body {
 .about-text {
   font-size: 1.2em;
   line-height: 1.5;
-  color: #0000ff;
+  color: #002dff;
 }
 
 /* Gallery Styles */
